Updated common library to 0.1.4.

--- a/infomapper/src/app/map-components/map.component.html
+++ b/infomapper/src/app/map-components/map.component.html
@@ -189,7 +189,7 @@
                                       (click)="openDataTableDialog(geoLayerView)"
                                       [hidden]="allFeatures[geoLayerView.geoLayerId] | menuDisable">
                                 <i class="fa fa-table fa-2x"></i>
-                                Data Table
+                                Data Table & Search
                               </button>
 
                               <button mat-menu-item
