Issue #403: Cleaned up code, updated how selected layers are created and displayed using the layer manager.

--- a/infomapper/src/app/nav-bar/tab/tab.component.css
+++ b/infomapper/src/app/nav-bar/tab/tab.component.css
@@ -1,5 +1,8 @@
 /* TAGS */
 
+a.dropdown-item:active {
+  background-color: #cfcfcf;
+}
 
 a.dropdown-item-not-enabled {
   background-color: #b4b3b3;
