Issue #406: Moved Map component and all necessary files to the common package.

--- a/infomapper/src/styles.css
+++ b/infomapper/src/styles.css
@@ -1,7 +1,7 @@
 @import 'assets/css/showdown-default.css';
 
 @import "../node_modules/select2/dist/css/select2.min.css";
-@import "./app/map-components/dialog-content/dialog-gapminder/css/style.css";
+/* @import "./app/map-components/dialog-content/dialog-gapminder/css/style.css"; */
 
 /* TAGS */
 
