--- a/infomapper/src/app/nav-bar/nav-bar.component.css
+++ b/infomapper/src/app/nav-bar/nav-bar.component.css
@@ -27,7 +27,7 @@ nav {
     padding: 0px 5px 0px 5px;
 }
 
-.navbar-brand {
+.home-button {
     /* padding: 8px !important;
     padding-bottom: 10px !important; */
     font-size: 22px;
