--- a/infomapper/src/app/nav-bar/nav-bar.component.html
+++ b/infomapper/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light py-0">
   <!-- TODO: jpkeahey 2020.05.25 - What should this display for the home
     button in the upper left? Keep with title, or something else? -->
-  <button mat-button class="navbar-brand" routerLink="/content-page/home">{{title}}</button>
+  <button mat-button class="home-button" routerLink="/content-page/home">{{title}}</button>
 
   <!-- Hamburger icon for mobile -->
   <button class="navbar-toggler"
