Initial testing code.

--- a/infomapper/src/app/app.component.html
+++ b/infomapper/src/app/app.component.html
@@ -2,3 +2,7 @@
    <app-nav-bar></app-nav-bar>
    <router-outlet></router-outlet>
 </div>
+
+<div *ngIf="false" class="infomapper-content">
+   <router-outlet></router-outlet>
+</div>
