Refactored some menu template and CSS files. Updated Common package version from 3.3.1 to 3.4.0.

--- a/infomapper/src/app/nav-bar/nav-bar.component.html
+++ b/infomapper/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,8 @@
   <button mat-button class="home-button" routerLink="/content-page/home">{{title}}</button>
 
   <!-- Hamburger icon for mobile. NOTE: Does not work. -->
-  <button class="navbar-toggler"
+  <button mat-button
+          class="navbar-toggler"
           type="button"
           data-toggle="collapse"
           data-target="#navbarNav"
@@ -22,11 +23,6 @@
         <tab [mainMenu]="mainMenu"></tab>
       </div>
     </ul>
-    <!-- <ul class="navbar-nav m1-auto">
-      <li class="nav-item activate .ml-auto right-item">
-        <a class="nav-link" href="http://openwaterfoundation.org" title="OWF home page" target="_blank"><img src="assets/img/OWF-Logo-Favicon-32x32.png"/></a>
-      </li>
-    </ul> -->
   </div>
 
 </nav>
