--- a/infomapper/src/app/nav-bar/nav-bar.component.css
+++ b/infomapper/src/app/nav-bar/nav-bar.component.css
@@ -1,48 +1,42 @@
 /* TAGS */
 
+/*  */
 a.nav-link {
-    padding: 0px !important;
+  padding: 0px !important;
 }
 
+/*  */
 nav {
-	z-index:999;
+  z-index: 999;
 }
 
 /* CLASSES */
 
+/*  */
 .navbar a {
-    font-weight:bold;
-    padding-bottom:0px;
+  font-weight: bold;
+  padding-bottom: 0px;
 }
 
+/*  */
 .navbar a:hover {
-    color: black;
+  color: black;
 }
 
+/* The top level navbar container. */
 .navbar {
-    border-top: 5px solid #9DB66B;
-    border-bottom: 5px solid #E9EAEE;
-    background-color: #ffffff;
-    height: 60px;
-    padding: 0px 5px 0px 5px;
+  border-top: 5px solid #9DB66B;
+  border-bottom: 5px solid #E9EAEE;
+  background-color: #ffffff;
+  height: 60px;
+  padding: 0px 5px;
 }
 
+/*  */
 .home-button {
-    /* padding: 8px !important;
-    padding-bottom: 10px !important; */
-    font-size: 22px;
-    font-weight: 600;
-    /* Important. Will probably want to be used with all mat-buttons. Remove the black outline around the button
+  font-size: 22px;
+  font-weight: 600;
+  /* Important. Will probably want to be used with all mat-buttons. Remove the black outline around the button
     when clicked. */
-    outline: none;
-}
-
-.right-item {
-    padding: 8px !important;
-}
-
-/* ID's */
-
-#about-the-project{
-    padding-top:5px !important;
+  outline: none;
 }
