--- a/infomapper/src/app/nav-bar/tab/tab.component.html
+++ b/infomapper/src/app/nav-bar/tab/tab.component.html
@@ -2,8 +2,8 @@
 <div *ngIf="mainMenu.menus" class="dropdown">
   <li class="nav-item dropdown">
     
-    <button mat-button matTooltip="{{mainMenu.tooltip}}"
-    [hidden]="isHidden"
+    <button mat-button
+    [matTooltip]="mainMenu.tooltip"
     matTooltipPosition="right"
     class="nav-link"
     id="navbarDropdown"
@@ -15,110 +15,61 @@
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div *ngFor="let subMenu of mainMenu.menus;">
 
-        <div *ngIf="subMenu.action === 'externalLink' && subMenu.visible !== false && (subMenu.enabled === true || subMenu.enabled === undefined)">
-          <li class="nav-item activate .ml-auto">
-            <div *ngIf="subMenu.separatorBefore===true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore===true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right"
-            class="dropdown-item" href="{{subMenu.url}}" target="_blank">
-              <img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
-              {{subMenu.name}}
-            </a>
-          </li>
-        </div>
-
-        <div *ngIf="subMenu.action === 'externalLink' && subMenu.visible !== false && subMenu.enabled === false">
-          <li class="nav-item-not-enabled activate .ml-auto">
-            <div *ngIf="subMenu.separatorBefore===true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore===true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right" class="dropdown-item">
-              <div class="brightness">
-                <img src="assets/app-default/img/baseline-open_in_new-24px.svg" class="brightness"/>
-                {{subMenu.name}}
-              </div>
-            </a>
-          </li>
-        </div>
-
-        <div *ngIf="subMenu.action === 'displayMap' && subMenu.visible !== false && (subMenu.enabled === true || subMenu.enabled === undefined)">
-          <li class="nav-item activate .ml-auto">
-            <div *ngIf="subMenu.separatorBefore===true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore===true">
-            <hr class="double-separator">
-            <hr class="double-separator">
-          </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right"
-            class="dropdown-item" routerLink="/map/{{subMenu.id}}">
-              <img src="assets/app-default/img/baseline-map-24px.svg"/>
-              {{subMenu.name}}
-            </a>
-          </li>
-        </div>
-
-        <div *ngIf="subMenu.action === 'displayMap' && subMenu.visible !== false && subMenu.enabled === false">
-          <li class="nav-item-not-enabled activate .ml-auto">
-            <div *ngIf="subMenu.separatorBefore===true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore===true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right" class="dropdown-item">
-              <div class="brightness">
-                <img src="assets/app-default/img/baseline-map-24px.svg"/>
-                {{subMenu.name}}
-              </div>
-            </a>
-          </li>
-        </div>
-
-        <div *ngIf="subMenu.action === 'contentPage' && (subMenu.enabled === true || subMenu.enabled === undefined) && subMenu.visible !== false">
-          <li class="nav-item activate .ml-auto">
+        <div *ngIf="subMenu | checkElement : 'subMenuContentPage'">
+          <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
             <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
             <div *ngIf="subMenu.doubleSeparatorBefore === true">
               <hr class="double-separator">
               <hr class="double-separator">
             </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right"
-            class="dropdown-item" routerLink="/content-page/{{subMenu.id}}">
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [routerLink]="['/content-page/', subMenu.id]">
               <i class="fa fa-file-text fa-lg" aria-hidden="true"></i>
               {{subMenu.name}}
             </a>
           </li>
         </div>
 
-        <div *ngIf="subMenu.action === 'contentPage' && subMenu.enabled === false && subMenu.visible !== false">
-          <li class="nav-item-not-enabled activate .ml-auto">
-            <div *ngIf="subMenu.separatorBefore===true" class="dropdown-divider"></div>
-            <div *ngIf="subMenu.doubleSeparatorBefore===true">
-              <hr class="double-separator">
-              <hr class="double-separator">
-            </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right"
-            class="dropdown-item">
-              <div class="brightness">
-                <i class="fa fa-file-text fa-lg" aria-hidden="true"></i>
-                {{subMenu.name}}
-              </div>
-            </a>
-          </li>
-        </div>
-
-        <div *ngIf="subMenu.action === 'dashboard'">
-          <li class="nav-item activate .ml-auto">
+        <div *ngIf="subMenu | checkElement : 'subMenuDashboard'">
+          <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
             <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
             <div *ngIf="subMenu.doubleSeparatorBefore === true">
               <hr class="double-separator">
               <hr class="double-separator">
             </div>
-            <a matTooltip="{{subMenu.tooltip}}" matTooltipPosition="right"
-            class="dropdown-item" [routerLink]="['/dashboard/' + subMenu.id]">
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [routerLink]="['/dashboard/', subMenu.id]">
               <i class="fa fa-tachometer fa-lg" aria-hidden="true"></i>
+              {{subMenu.name}}
+            </a>
+          </li>
+        </div>
+
+        <div *ngIf="subMenu | checkElement : 'subMenuDisplayMap'">
+          <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
+            <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
+            <div *ngIf="subMenu.doubleSeparatorBefore === true">
+            <hr class="double-separator">
+            <hr class="double-separator">
+          </div>
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [routerLink]="['/map/', subMenu.id]">
+              <img src="assets/app-default/img/baseline-map-24px.svg"/>
+              {{subMenu.name}}
+            </a>
+          </li>
+        </div>
+
+        <div *ngIf="subMenu | checkElement : 'subMenuExternalLink'">
+          <li class="activate .ml-auto" [ngClass]="{ 'li-disabled': subMenu.enabled === false }">
+            <div *ngIf="subMenu.separatorBefore === true" class="dropdown-divider"></div>
+            <div *ngIf="subMenu.doubleSeparatorBefore === true">
+              <hr class="double-separator">
+              <hr class="double-separator">
+            </div>
+            <a [matTooltip]="subMenu.tooltip" matTooltipPosition="right"
+            class="dropdown-item" [href]="subMenu.url" target="_blank">
+              <img src="assets/app-default/img/baseline-open_in_new-24px.svg"/>
               {{subMenu.name}}
             </a>
           </li>
@@ -129,73 +80,54 @@
   </li>
 </div>
 
+<!-- MainMenus with no SubMenus. -->
+<!-- Content Page MainMenu. -->
+<div *ngIf="mainMenu.action === 'contentPage'">
+  <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
+    <button mat-button
+    [matTooltip]="mainMenu.tooltip"
+    matTooltipPosition="right"
+    class="nav-link"
+    [routerLink]="['/content-page/', mainMenu.id]">
+      {{mainMenu.name}}
+    </button>
+  </li>
+</div>
+
 <!-- Dashboard MainMenu. -->
 <div *ngIf="mainMenu.action === 'dashboard'">
-  <li class="nav-item activate .ml-auto">
+  <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
     <button mat-button
-    matTooltip="{{mainMenu.tooltip}}"
+    [matTooltip]="mainMenu.tooltip"
     matTooltipPosition="right"
-    [disabled]="isDisabled"
-    [hidden]="isHidden"
     class="nav-link"
-    [routerLink]="['/dashboard/' + mainMenu.id]">
+    [routerLink]="['/dashboard/', mainMenu.id]">
       {{mainMenu.name}}
     </button>
   </li>
 </div>
 
-<!-- Content Page MainMenu enabled. -->
-<div *ngIf="mainMenu.action === 'contentPage' && (mainMenu.enabled === true || mainMenu.enabled === undefined)">
-  <li class="nav-item activate .ml-auto">
+<!-- Map MainMenu. -->
+<div *ngIf="mainMenu.action === 'displayMap'">
+  <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
     <button mat-button
-    matTooltip="{{mainMenu.tooltip}}"
+    [matTooltip]="mainMenu.tooltip"
     matTooltipPosition="right"
-    [disabled]="isDisabled"
-    [hidden]="isHidden"
     class="nav-link"
-    routerLink="/content-page/{{mainMenu.id}}">
+    [routerLink]="['/map/', mainMenu.id]">
       {{mainMenu.name}}
     </button>
   </li>
 </div>
 
-<!-- Content Page MainMenu disabled. -->
-<div *ngIf="mainMenu.action === 'contentPage' && mainMenu.enabled === false">
-  <li class="nav-item-not-enabled activate .ml-auto">
-    <button mat-button matTooltip="{{mainMenu.tooltip}}"
-    matTooltipPosition="right"
-    [disabled]="isDisabled"
-    [hidden]="isHidden"
+<!-- External Link MainMenu. -->
+<div *ngIf="mainMenu.action === 'externalLink'">
+  <li class="nav-item activate .ml-auto" [ngClass]="{ 'li-disabled': mainMenu.enabled === false }">
+    <a mat-button
+    [matTooltip]="mainMenu.tooltip" matTooltipPosition="right"
+    [attr.href]="mainMenu.url" target="_blank"
     class="nav-link">
       {{mainMenu.name}}
-    </button>
-  </li>
-</div>
-
-<!-- Map MainMenu enabled. -->
-<div *ngIf="mainMenu.action === 'displayMap' && (mainMenu.enabled === true || mainMenu.enabled === undefined)">
-  <li class="nav-item activate .ml-auto">
-    <button mat-button
-    [disabled]="isDisabled"
-    [hidden]="isHidden"
-    matTooltip="{{mainMenu.tooltip}}"
-    matTooltipPosition="right"
-    class="nav-link"
-    routerLink="/map/{{mainMenu.id}}">
-      {{mainMenu.name}}
-    </button>
-  </li>
-</div>
-
-<!-- Map MainMenu disabled. -->
-<div *ngIf="mainMenu.action === 'displayMap' && mainMenu.enabled === false">
-  <li class="nav-item-not-enabled activate .ml-auto">
-    <button mat-button matTooltip="{{mainMenu.tooltip}}"
-    matTooltipPosition="right"
-    [disabled]="isDisabled"
-    [hidden]="isHidden"
-    class="nav-link">
-      {{mainMenu.name}}
-    </button>
+    </a>
   </li>
 </div>
